--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,12 +70,12 @@
       <div class="container">
         <div class="row no-gutters slider-text justify-content-start align-items-center justify-content-center">
           <div class="col-lg-8 ftco-animate">
-            <form action="/api/v1/search-car" style="display:flex; display: flex; justify-content:center; margin-bottom: 30px;">
+            <!-- <form action="/api/v1/search-car" style="display:flex; display: flex; justify-content:center; margin-bottom: 30px; width: 50px">
             <div>
               <input placeholder = "Search Your Favorite Car Here..." type="search" name="car_name" id="search" aria-label = "Search" style="background: white; border:none; outline: none; color: red; width: 380px; height: 43px; border-top-left-radius: 5px; border-bottom-left-radius: 5px;">
             </div>
             <input type="submit" style=" height: 43px; border: none; border-top-right-radius: 5px; border-bottom-right-radius: 5px; background: rgb(241, 238, 238); color:rgb(17, 16, 16)" disabled value = "Search">          
-          </form>
+          </form> -->
             <div class="text w-100 text-center mb-md-5 pb-md-5">
 	            <h1 class="mb-4">Fast &amp; Easy Way To Rent A Car</h1>
 	            <p style="font-size: 18px;">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts</p>
