--- a/views/add-blog.ejs
+++ b/views/add-blog.ejs
@@ -41,8 +41,8 @@
 	          <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="/services" class="nav-link">Services</a></li>
 	          <li class="nav-item"><a href="/pricing" class="nav-link">Pricing</a></li>
-	          <li class="nav-item active"><a href="/car" class="nav-link">Cars</a></li>
-	          <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
+	          <li class="nav-item"><a href="/car" class="nav-link">Cars</a></li>
+	          <li class="nav-item active"><a href="/blog" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
 	        </ul>
 						          <ul class="navbar-nav ml-auto">
