--- a/views/blog-portal.ejs
+++ b/views/blog-portal.ejs
@@ -41,8 +41,8 @@
 	          <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="/services" class="nav-link">Services</a></li>
 	          <li class="nav-item"><a href="/pricing" class="nav-link">Pricing</a></li>
-	          <li class="nav-item active"><a href="/car" class="nav-link">Cars</a></li>
-	          <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
+	          <li class="nav-item"><a href="/car" class="nav-link">Cars</a></li>
+	          <li class="nav-item active"><a href="/blog" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
 	        </ul>
 						          <ul class="navbar-nav ml-auto">
@@ -65,7 +65,7 @@
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
           <div class="col-md-9 ftco-animate pb-5">
           	<p class="breadcrumbs"><span class="mr-2"><a href="/">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Cars <i class="ion-ios-arrow-forward"></i></span></p>
-            <h1 class="mb-3 bread">Explore Cars</h1>
+            <h1 class="mb-3 bread">Explore Blog</h1>
           </div>
         </div>
       </div>
