--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -60,7 +60,7 @@
 	    </div>
 	  </nav>
     <!-- END nav -->
-    
+
     <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_3.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
@@ -83,7 +83,7 @@
 			          	<div class="icon mr-3">
 			          		<span class="icon-map-o"></span>
 			          	</div>
-			            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+			            <p><span>Address:</span> Wheeler's House, Abule Egba, Lagos state.</p>
 			          </div>
 		          </div>
 		          <div class="col-md-12">
