--- a/views/login.ejs
+++ b/views/login.ejs
@@ -82,7 +82,7 @@
 			            <div class="form-group">
 			              <input type="submit" value="Log In" class="btn btn-secondary py-3 px-4">
 			            </div>
-                        	  					<p>Sign in with google? <a href="/auth/google" style = "color: blue">Sign Up</a></p>
+                        	  					<p>Sign in with google? <a href="/auth/google" style = "color: blue">Sign In</a></p>
                         	  					<p>Don't have an account? <a href="/api/v1/sign-up" style = "color: blue">Sign Up</a></p>
 			    			</form>
 	  					</div>
