--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -94,6 +94,7 @@
 			            <div class="form-group">
 			              <input type="submit" value="Sign Up" class="btn btn-secondary py-3 px-4" id = "submit">
 			            </div>	  					<p>Signed up already?? <a href="/login" style = "color: blue">Log in</a></p>
+                                      <p>Sign in with google? <a href="/auth/google" style = "color: blue">Sign In</a></p>
 			    			</form>
 	  					</div>
 
