--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -79,10 +79,6 @@
 			    					<label for="lastName" class="label">Last Name</label>
 			    					<input type="text" class="form-control" placeholder="Last Name" name="lastName" id = "lastName" required>
 			    				</div>
-                  <!-- <div class="form-group">
-			    					<label for="age" class="label">Age</label>
-			    					<input type="Email" class="form-control" placeholder="Age" name="age">
-			    				</div> -->
                   <div class="form-group">
 			    					<label for="email" class="label">email</label>
 			    					<input type="Email" class="form-control" placeholder="Email" name="email" id = "email" required>
@@ -93,8 +89,9 @@
 			    				</div>
 			            <div class="form-group">
 			              <input type="submit" value="Sign Up" class="btn btn-secondary py-3 px-4" id = "submit">
-			            </div>	  					<p>Signed up already?? <a href="/login" style = "color: blue">Log in</a></p>
-                                      <p>Sign in with google? <a href="/auth/google" style = "color: blue">Sign In</a></p>
+			            </div>	  					
+                  <p>Signed up already?? <a href="/login" style = "color: blue">Log in</a></p>
+                  <p>Sign in with google? <a href="/auth/google" style = "color: blue">Sign In</a></p>
 			    			</form>
 	  					</div>
 
@@ -111,9 +108,9 @@
               <h2 class="ftco-heading-2"><a href="#" class="logo">Wheeler<span>Rides</span></a></h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="twitter.com"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="facebook.com"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="instagram.com"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://twitter.com"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="https://facebook.com"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://instagram.com"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -156,7 +153,6 @@
         </div>
         <div class="row">
           <div class="col-md-12 text-center">
-
             <p>
   Copyright &copy;<script>document.write(new Date().getFullYear());</script>
 </p>
@@ -164,9 +160,6 @@
         </div>
       </div>
     </footer>
-    
-  
-
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
